@@ -41,14 +41,20 @@ class AirbyteIntegrationTestJavaPlugin implements Plugin<Project> {
 
             outputs.upToDateWhen { false }
 
-            //This allows to set up a `gradle.properties` file inside the connector folder to reduce number of threads and reduce parallelization.
-            //Specially useful for connectors that shares resources (like Redshift or Snowflake).
-            ext.numberThreads = project.hasProperty('numberThreads') ? project.getProperty('numberThreads') as int : Runtime.runtime.availableProcessors() ?: 1
+            maxParallelForks = Runtime.runtime.availableProcessors()
+            // This allows to set up a `gradle.properties` file inside the connector folder to reduce parallelization.
+            // This is especially useful for connectors that shares resources (like Redshift or Snowflake).
+            if (project.hasProperty('numberThreads')) {
+                int numberThreads = 0
+                String numberThreadsString = project.property('numberThreads').toString()
+                if (numberThreadsString.isInteger()) {
+                    numberThreads = numberThreadsString as int
+                }
+                 if (numberThreads > 0 && numberThreads < maxParallelForks) {
+                    maxParallelForks = numberThreads
+                }
+            }
             maxHeapSize = '3g'
-            maxParallelForks = numberThreads
-
-            // This is needed to make the destination-snowflake tests succeed - https://github.com/snowflakedb/snowflake-jdbc/issues/589#issuecomment-983944767
-            jvmArgs = ["--add-opens=java.base/java.nio=ALL-UNNAMED"]
 
             systemProperties = [
                 // Allow tests to set @Execution(ExecutionMode.CONCURRENT)
